--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,18 @@ tags = []
 name = "random-motion"
 path = "src/main.rs"
 
-[dependencies.graphics]
+[dependencies.piston2d-graphics]
 
-git = "https://github.com/pistondevelopers/rust-graphics"
+git = "https://github.com/pistondevelopers/graphics"
 
 [dependencies.piston]
 
 git = "https://github.com/pistondevelopers/piston/"
 
-[dependencies.sdl2_game_window]
+[dependencies.pistoncore-sdl2_window]
 
-git = "https://github.com/pistondevelopers/sdl2_game_window"
+git = "https://github.com/pistondevelopers/sdl2_window"
 
-[dependencies.opengl_graphics]
+[dependencies.piston2d-opengl_graphics]
 
 git = "https://github.com/pistondevelopers/opengl_graphics"
